set pluginsDir in packages #1051
fixes #1051

--- a/debian/tokumx.conf
+++ b/debian/tokumx.conf
@@ -33,6 +33,9 @@ logappend = true
 # location of pidfile (default: no pidfile)
 #pidfilepath = /var/run/tokumx/tokumx.pid
 
+# Where to find plugins
+pluginsDir = /usr/lib/tokumx/plugins
+
 ########################################################################
 # FRACTAL TREE STORAGE OPTIONS
 
