--- a/rpm/tokumx.conf
+++ b/rpm/tokumx.conf
@@ -33,6 +33,9 @@ fork = true
 # location of pidfile
 pidfilepath = /var/run/tokumx/tokumx.pid
 
+# Where to find plugins
+pluginsDir = @LIBDIR@/tokumx/plugins
+
 ########################################################################
 # FRACTAL TREE STORAGE OPTIONS
 
