added some fs info to crashdump #1070

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,9 +92,37 @@ check_include_files(unistd.h MONGO_HAVE_HEADER_UNISTD_H)
 if (MONGO_HAVE_HEADER_UNISTD_H)
   set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_UNISTD_H)
 endif ()
+check_include_files(linux/magic.h MONGO_HAVE_HEADER_LINUX_MAGIC_H)
+if (MONGO_HAVE_HEADER_LINUX_MAGIC_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_LINUX_MAGIC_H=1)
+endif ()
+check_include_files(sys/disklabel.h MONGO_HAVE_HEADER_SYS_DISKLABEL_H)
+if (MONGO_HAVE_HEADER_SYS_DISKLABEL_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_SYS_DISKLABEL_H=1)
+endif ()
+check_include_files(sys/mount.h MONGO_HAVE_HEADER_SYS_MOUNT_H)
+if (MONGO_HAVE_HEADER_SYS_MOUNT_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_SYS_MOUNT_H=1)
+endif ()
+check_include_files(sys/param.h MONGO_HAVE_HEADER_SYS_PARAM_H)
+if (MONGO_HAVE_HEADER_SYS_PARAM_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_SYS_PARAM_H=1)
+endif ()
 check_include_files(sys/resource.h MONGO_HAVE_HEADER_SYS_RESOURCE_H)
 if (MONGO_HAVE_HEADER_SYS_RESOURCE_H)
   set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_SYS_RESOURCE_H=1)
+endif ()
+check_include_files(sys/statfs.h MONGO_HAVE_HEADER_SYS_STATFS_H)
+if (MONGO_HAVE_HEADER_SYS_STATFS_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_SYS_STATFS_H=1)
+endif ()
+check_include_files(sys/vfs.h MONGO_HAVE_HEADER_SYS_VFS_H)
+if (MONGO_HAVE_HEADER_SYS_VFS_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_SYS_VFS_H=1)
+endif ()
+check_include_files(xfs/xfs.h MONGO_HAVE_HEADER_XFS_XFS_H)
+if (MONGO_HAVE_HEADER_XFS_XFS_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_XFS_XFS_H=1)
 endif ()
 
 if (USE_SASL_CLIENT)
