added getrlimit and sysconf info #1070

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,9 +84,17 @@ else ()
 endif ()
 
 include(CheckIncludeFiles)
+check_include_files(limits.h MONGO_HAVE_HEADER_LIMITS_H)
+if (MONGO_HAVE_HEADER_LIMITS_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_LIMITS_H)
+endif ()
 check_include_files(unistd.h MONGO_HAVE_HEADER_UNISTD_H)
 if (MONGO_HAVE_HEADER_UNISTD_H)
   set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_UNISTD_H)
+endif ()
+check_include_files(sys/resource.h MONGO_HAVE_HEADER_SYS_RESOURCE_H)
+if (MONGO_HAVE_HEADER_SYS_RESOURCE_H)
+  set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS MONGO_HAVE_HEADER_SYS_RESOURCE_H=1)
 endif ()
 
 if (USE_SASL_CLIENT)
